--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,11 @@ repositories {
 }
 
 dependencies {
+
+    //Hibernate
+//    implementation 'org.hibernate.orm:hibernate-core:6.1.6.Final'
+
+    // Lombok
     compileOnly 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
 }
