--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,20 @@ repositories {
 
 dependencies {
 
+    // JUnit
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
+    implementation'org.junit.platform:junit-platform-launcher:1.9.2'
+
     //Hibernate
 //    implementation 'org.hibernate.orm:hibernate-core:6.1.6.Final'
 
     // Lombok
     compileOnly 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
+}
+
+
+test {
+    useJUnitPlatform()
 }
