--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,8 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.26'
 
     //Hibernate
-    implementation group: 'org.hibernate.orm', name: 'hibernate-core', version: '6.2.0.Final'
+//    implementation group: 'org.hibernate.orm', name: 'hibernate-core', version: '6.2.0.Final'
+    implementation 'org.hibernate:hibernate-core-jakarta:5.5.6.Final'
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.6.0'
 
     //Log4j
@@ -34,8 +35,11 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
 
     // кеширование 2го уровня
-    implementation 'org.hibernate:hibernate-jcache:6.1.7.Final'
-    implementation 'org.ehcache:ehcache:3.10.6'
+//    implementation group: 'org.hibernate', name: 'hibernate-jcache', version: '5.6.15.Final'
+//    implementation group: 'org.hibernate', name: 'hibernate-ehcache', version: '5.6.15.Final'
+    implementation 'org.hibernate:hibernate-jcache:5.5.6.Final' // реализация API
+    implementation 'org.ehcache:ehcache:3.9.5' // API из JSR
+//    implementation 'org.ehcache:ehcache:3.10.6'
 
 }
 
